--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+
+		</dependency>
+
+
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
@@ -122,5 +129,7 @@
 			</releases>
 		</pluginRepository>
 	</pluginRepositories>
-
+, consumes = MediaType.APPLICATION_JSON_VALUE,
+            pro, consumes = MediaType.APPLICATION_JSON_VALUE,
+            produces = MediaType.APPLICATION_JSON_VALUEduces = MediaType.APPLICATION_JSON_VALUE
 </project>
